--- a/index.html
+++ b/index.html
@@ -11,15 +11,19 @@
           <img src="2.png"width="450"height="300"></img>
           <div class="jij">function:    </div>
           <img src="3.jpg"width="750"height="400"></img>
+          <div class="jij">keyboard</div>
           <img src="4.jpg"></img>
 
-          <div class="kkk">Ipad</div>
-          <div class="lll"></div>
-          <img src="5.jpg"></img>
-          <div class="i">ipad</div>
+          <div class="kkk">news</div>
+        
+          <img id="ipad_pic" src="5.jpg"width="450"height="300"></img>
+          <div class="i">Touch</div>
           <img src="6.jpg"></img>
-          <img src="7.jpg">ipad</img>
+          <img src="7.jpg"></img>
           <img src="8.jpg"></img>
+          <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width=390 height=43></EMBED>
+          <EMBED SRC="music.mp3" loop=true width=390 height=43></EMBED>
+
           
 
 
