:style git commit -a -m :style git commit -a -m :style

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           <img src="7.jpg"width="900"height="600"></img>
           <img src="8.jpg"></img>
           <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="390"height="300"></EMBED>
-          <EMBED SRC="music.mp3" loop=true width="390" height="300"></EMBED>
+          <EMBED SRC="music.mp3" loop=true width="750" height="500"></EMBED>
           <EMBED SRC="http://img.tv.itc.cn/soimg/video_default.png"></EMBED>
+          <EMBED SRC="http://img.tv.itc.cn/soimg/video_default.png"></EMBED>">
           <span class="msk-bg"></span>
           
           
