--- a/index.html
+++ b/index.html
@@ -9,19 +9,19 @@
           
           <img src="1.jpg"width="600"height="450"></img>  
           <img src="2.png"width="450"height="300"></img>
-          <div class="jij">Function:</div>
+          <div class="jij">Function:..............................................</div>
           <img src="3.jpg"width="750"height="400"></img>
-          <div class="jij">Keyboard</div>
+          <div class="jij">Keyboard..............................................</div>
           <img src="4.jpg"></img>
 
-          <div class="kkk">News</div>
+          <div class="kkk">News.............................................</div>
         
           <img id="ipad_pic" src="5.jpg"width="450"height="300"></img>
-          <div class="i">Touch</div>
+          <div class="i">Touch...........................................</div>
           <img src="6.jpg"></img>
           <img src="7.jpg"width="900"height="600"></img>
           <img src="8.jpg"></img>
-          <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="390"height="300"></EMBED>
+          <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1000"height="500"></EMBED>
           <EMBED SRC="music.mp3" loop=true width="750" height="500"></EMBED>
           <EMBED SRC="http://img.tv.itc.cn/soimg/video_default.png"></EMBED>
           <EMBED SRC="http://img.tv.itc.cn/soimg/video_default.png"></EMBED>">
