--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
        <body>
         <input type="button" onclick="location.href='file:///C:/Users/asus/Desktop/powwow/rebecca17930329.github.io/index3.html'">
+        <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
 
 
 
