--- a/index.html
+++ b/index.html
@@ -8,7 +8,16 @@
 
 
        <body>
+        <div>..........FHOTOS......................................</div>
         <input type="button" onclick="location.href='file:///C:/Users/asus/Desktop/powwow/rebecca17930329.github.io/index3.html'">
+        <img src="y1.jpg"></img>
+        <img src="y6,jpg"></img>
+        <div>...........THE 16th BIRTHDAY.............................</div>
+        <img src="y3.jpg"></img>
+        <div>CAKE</div>
+        <img src="y4.jpg"></img>
+        <img src="y5.jpg"></img>
+        
         <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
 
 
