--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
 
        <body>
-        <div>..........FHOTOS......................................</div>
+        <div>..........PHOTOS......................................</div>
+        <div>Yang Hong Yu </div>
+        <div>Northeast Foreign High School^^^^Grade 11</div>
         <input type="button" onclick="location.href='file:///C:/Users/asus/Desktop/powwow/rebecca17930329.github.io/index3.html'">
         <img src="y1.jpg"></img>
+        <img src="y7.jpg"></img
+        
         <img src="y6,jpg"></img>
         <div>...........THE 16th BIRTHDAY.............................</div>
         <img src="y3.jpg"></img>
