--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
        <head>WELCOME TO HELEN YANG'S PERSONAL WEBPAGE
 
 
-        <link rel="stylesheet" href="style.css" />
+        <link rel="stylesheet" href="style.css"/>
 
-       </head>
+        </head>
 
 
        <body>
+        
         <div>..........PHOTOS......................................</div>
         <div>Yang Hong Yu </div>
         <div>Northeast Foreign High School^^^^Grade 11</div>
         <input type="button" onclick="location.href='file:///C:/Users/asus/Desktop/powwow/rebecca17930329.github.io/index3.html'">
         <img src="y1.jpg"></img>
-        <img src="y7.jpg"></img
+        <img src="y7.jpg"></img>
 
         <img src="y6,jpg"></img>
         <div>...........THE 16th BIRTHDAY.............................</div>
@@ -22,7 +23,7 @@
         <img src="y4.jpg"></img>
         <img src="y5.jpg"></img>
         <div>Tou can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
-        <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
+        <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468 f"loop=true width="1500"height="1000"></EMBED>
 
 
 
