--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 
 
        <body>
+        <a class="enter" href="bio.html" target="-blank">
+            Go to IPAD
+
+
+        </a>
+        <a class="enter" href="resume.html" target="-blank">
+            <div>Go to my friend and Food</div>
+
+
+        </a>
+
         
         <div>..........PHOTOS......................................</div>
         <div>Yang Hong Yu </div>
