--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <img src="y4.jpg"></img>
         <img src="y5.jpg"></img>
         <div>Tou can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
-        <EMBED SRC="<a target="_blank" href="<a target="_blank" href="http://www.baidu.com/link?url=9xdMiGb2vEDztegHVCx9zBGMRJRyAVMjH322h29kwmQOsgkR2x-W-fjELeMlGcz3PEe8KGv-WTwx1hamzP0h70wgvD0myhj40MElu72FwfQSIHD4XdmuiBfyYga1Dm_K&amp;wd=&amp;eqid=c015efdb0000d7f70000000355beb0a3"loop=true width="1500"height="1000"></EMBED>
+        <EMBED SRC="<a target="_blank" href="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
 
 
 
