--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <div>Yang Hong Yu </div>
         <div>Northeast Foreign High School^^^^Grade 11</div>
         <input type="button" onclick="location.href='file:///C:/Users/asus/Desktop/powwow/rebecca17930329.github.io/index3.html'">
-        <img src="y1.jpg"></img>
         <img src="y7.jpg"></img>
+        <img src="b1.jpg"></img>
+        <img src="b2.jpg"></img>
+        <img src="b3.jpg"></img>
 
         <img src="y6,jpg"></img>
         <div>...........THE 16th BIRTHDAY.............................</div>
@@ -34,7 +36,7 @@
         <img src="y4.jpg"></img>
         <img src="y5.jpg"></img>
         <div>Tou can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
-        <EMBED SRC="<a target="_blank" href="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
+        <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
 
 
 
