--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 
         <link rel="stylesheet" href="style.css"/>
+        <div>BECAREFUL!!!I'm INVADING YOUR SYSTEM!!!^_^ ^_^ ^_^
+             </div>
 
         </head>
 
@@ -18,6 +20,7 @@
 
 
         </a>
+        <div>HOBBIES:</div><div>Reading books ....</div><div>listening to music.....</div><div>watch TV programs.....</div><div>Thingking....</div>
 
         
         <div>..........PHOTOS......................................</div>
@@ -35,7 +38,7 @@
         <div>CAKE</div>
         <img src="y4.jpg"></img>
         <img src="y5.jpg"></img>
-        <div>Tou can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
+        <div>You can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
         <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
 
 
