--- a/resume.html
+++ b/resume.html
@@ -43,6 +43,15 @@
              <img src="a15.jpg"width="300"height="450"></img>
              <div>You can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
              <EMBED SRC="http://mp3.sogou.com/tiny/song?tid=532243b134f6352c&amp;query=%C8%E7%B9%FB%C3%BB%D3%D0%C4%E3&amp;song_id=&amp;song_name=%C8%E7%B9%FB%C3%BB%D3%D0%C4%E3&amp;singer_name=%CF%F4%BE%B4%CC%DA&amp;album_name=%B0%AE%B5%C4%CA%B1%BF%CC%D7%D4%D1%A1%BC%AD"loop=true width="1500"height="1000"></EMBED>
+             <div>..................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................................</div>
+             
+               <a class="enter" href="index.html" target="-blank">
+               <div>Go BACK TO HOMEPAGE</div>
+
+
+               </a>
+
+
              
 
 
