--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 
        <body>
         <a class="enter" href="bio.html" target="-blank">
-            Go to IPAD
+            Go To IPAD
 
 
         </a>
         <a class="enter" href="resume.html" target="-blank">
-            <div>Go to my friend and Food</div>
+            <div>Go To My Friend And Food</div>
 
 
         </a>
-        <div>HOBBIES:</div><div>Reading books ....</div><div>listening to music.....</div><div>watch TV programs.....</div><div>Thingking....</div>
+        <a class="enter" href="animals.html" target="-blank">
+               <div>Go TO PROTECT THE ANIMALS</div>
+        </a>
+        <div>HOBBIES:</div><div>Reading books ....</div><div>listening to music.....</div><div>Watching TV programs.....</div><div>Thinking....</div><div>Cooking.....</div>
 
         
         <div>..........PHOTOS......................................</div>
@@ -40,6 +43,8 @@
         <img src="y5.jpg"></img>
         <div>You can touch the low bottom to start listening to music.And you also can listen to more kinds of music by click it.</div>
         <EMBED SRC="http://music.baidu.com/song/s/26072c1faca0855af468f"loop=true width="1500"height="1000"></EMBED>
-
+        <a class="enter" href="index.html" target="-blank">
+               <div>Go BACK TO HOMEPAGE</div>
+        
 
 
