--- a/animals.html
+++ b/animals.html
@@ -13,7 +13,7 @@
      <img src="c2.jpg"></img>
      <div>The breaking place for the birds</div>
      <img src="c3.jpg"></img>
-     <div>The places for cats to forage.
+     <div>The places for cats to forage.</div>
      <img src="c4.jpg"></img>
      <div>The pictures of volunteers who are making the ROUD SIDE.</div>
      <img src="c5.jpg"></img>
