--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
        <head>WELCOME TO HELEN YANG'S PERSONAL WEBPAGE
+       <div>The blue  words can be touched!!!!!</div>
 
 
         <link rel="stylesheet" href="style.css"/>
