--- a/animals.html
+++ b/animals.html
@@ -19,8 +19,8 @@
      <img src="c5.jpg"></img>
      <img src="c6.jpg"></img>
      <img src="c7.jpg"></img>
-     <a class="enter" href="index.html" target="-blank">
-               <div>Go BACK TO HOMEPAGE</div>
+     <a class="enter" href="thank.html" target="-blank">
+               <div>THANK YOU</div>
     </body>
 
 
