--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
        <head>WELCOME TO HELEN YANG'S PERSONAL WEBPAGE
-       <div>Please touch the lowest blue link!!!!!</div>
+       <div>Please touch the lowest blue link to go to the next page!!!!!</div>
 
 
 
         <link rel="stylesheet" href="style.css"/>
-        <div>BECAREFUL!!!I'm INVADING YOUR SYSTEM!!!^_^ ^_^ ^_^
+        <div>BECAREFUL!!!I'm INVADING YOUR SYSTEM!!!^_^ ^_^ ^_^JOKE
              </div>
 
         </head>
