--- a/thank.html
+++ b/thank.html
@@ -5,7 +5,7 @@
 	<div>THANK YOU FOR LOOKING!!!</div>
 	<div>THANK YOU FOR LOOKING!!!</div>
 	<a class="enter" href="index.html" target="-blank">
-               <div>Go BACK TO HOMEPAGE</div>
+               <div>Go BACK TO HOMEPAGE AND QQ(the bottom)</div>
 
 
 
